--- a/package.json
+++ b/package.json
@@ -40,15 +40,14 @@
     "mui-datatables": "^4.3.0",
     "npm-latest": "^2.0.0",
     "qrcode.react": "^4.2.0",
-    "react": "^18.3.1",
+    "react": "^17.0.2",
     "react-apexcharts": "^1.4.1",
     "react-barcode": "^1.5.3",
-    "react-canvas-draw": "^1.2.1",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-data-grid": "^7.0.0-beta.44",
     "react-datepicker": "^8.1.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "^17.0.2",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-model": "^4.3.1",
@@ -71,6 +70,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "install": "npm install --legacy-peer-deps",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
