--- a/package.json
+++ b/package.json
@@ -40,14 +40,15 @@
     "mui-datatables": "^4.3.0",
     "npm-latest": "^2.0.0",
     "qrcode.react": "^4.2.0",
-    "react": "^17.0.2",
+    "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-barcode": "^1.5.3",
+    "react-canvas-draw": "^1.2.1",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-data-grid": "^7.0.0-beta.44",
     "react-datepicker": "^8.1.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-model": "^4.3.1",
@@ -67,12 +68,14 @@
     "wouter": "^3.7.1",
     "xlsx": "^0.18.5"
   },
+  "homepage": "https://mohanmohan007.github.io/BCS-CARE/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "install": "npm install --legacy-peer-deps",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
